Import of BGILMORE/P2P-Transmission-0.02 from CPAN.
gitpan-cpan-distribution: P2P-Transmission
gitpan-cpan-version:      0.02
gitpan-cpan-path:         BGILMORE/P2P-Transmission-0.02.tar.gz
gitpan-cpan-author:       BGILMORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension P2P::Transmission.
 
+	0.02  Fri Jan 11 2008
+		- added META.yml file
+		- fixed README errors
+
 	0.01  Fri Jan 11 2008
 		- initial release
 
